--- a/src/h5/scss/style.scss
+++ b/src/h5/scss/style.scss
@@ -1,3 +1,121 @@
-@import './m_header.scss';
-@import './p_home.scss';
-@import './m_footer.scss';
+
+.clearfix:after {
+    display: block;
+    clear: both;
+    content: "";
+    visibility: hidden;
+    height: 0
+}
+input,button,select,textarea{outline:none}
+
+*{
+    box-sizing: border-box;
+}
+
+html, body { 
+    height: 100%; 
+    padding: 0; 
+    margin: 0;
+    font-size: px2vw(32);
+    line-height: unset;
+    min-height: 100vh;
+}
+
+html, body, .pull-refresh-class{
+    background-color: #F4F4F4;
+}
+
+body { /* IOS禁止微信调整字体大小 */
+    -webkit-text-size-adjust: 100% !important;
+    text-size-adjust: 100% !important;
+    -moz-text-size-adjust: 100% !important;
+}
+
+i{
+    font-style: unset;
+}
+
+#app {
+    font-family: "Avenir", Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    min-height: 100%;
+}
+
+
+
+.module-title {
+    padding: 0 30px;
+    text-align: center;
+    height: 80px;
+    line-height: 80px;
+    color: #333333;
+    font-size: 28px;
+    font-weight: bold;
+    background: #fff;
+}
+
+.module-slider {
+    .swiper-container {
+        background: #fff;
+        // position: relative;
+        width: 100%;
+        height: 300px;
+        padding: 20px 40px 0;
+
+        img {
+            width: 100%;
+            height: 100%;
+            background-size: 100% 100%;
+        }
+    }
+}
+.module-nav {
+    .nav-container {
+        display: flex;
+        width: auto;
+        justify-content: flex-start;
+        flex-flow: row wrap;
+        align-items: center;
+        text-align: center;
+        padding: 20px 40px 0;
+
+        .homeCategory, 
+        .homeWrapper {
+            width: 100px;
+            flex-direction: column;
+            .categoryItem{
+                line-height: 0;
+                .categoryImg{
+                    display: block;
+                    width: 100%;
+                    height: 100px;
+                    border-radius: 5px;
+                }
+            }
+            .categoryTitle{
+                font-size: 24px;
+                color: #000;
+                margin: 10px 0 20px;
+            }
+        }
+
+        .homeWrapper {
+            margin-right: 40px;
+
+            @media (max-width: 768px){
+                &:nth-child(5n) {
+                    margin-right: 0;
+                }
+            }
+
+              /* 兼容pc端 */
+              @media (min-width: 1024px){
+                margin-right: calc((1536px - 55px*2 - 100px*10)/9) ;
+                &:nth-last-child(1) {
+                    margin-right: 0;
+                }
+            }
+        }
+    }
+}
